compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__externals__erlang_only_function_with_erlang_external.snap
---
source: compiler-core/src/type_/tests/externals.rs
assertion_line: 129
expression: "@external(erlang, \"one\", \"two\")\nfn erlang_only() -> Int\n\n@external(erlang, \"one\", \"two\")\npub fn uh_oh() -> Int {\n  erlang_only()\n}\n"
---
error: Unsupported target
  ┌─ /src/one/two.gleam:6:3
  │
6 │   erlang_only()
  │   ^^^^^^^^^^^

This value is not available as it is defined using externals, and there is
no implementation for the JavaScript target.

Hint: Did you mean to build for a different target?
